prost-reflect/tests/snapshots/main__option_resolution11.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - dependency:
      - google/protobuf/any.proto
      - google/protobuf/descriptor.proto
    extension:
      - extendee: ".google.protobuf.FileOptions"
        jsonName: a
        label: LABEL_REPEATED
        name: a
        number: 1001
        type: TYPE_MESSAGE
        typeName: ".google.protobuf.Any"
    messageType:
      - field:
          - jsonName: foo
            label: LABEL_OPTIONAL
            name: foo
            number: 1
            type: TYPE_STRING
        name: Foo
    name: test.proto
    options:
      "[a]":
        - "@type": type.googleapis.com/Foo
          foo: bar

