prost-reflect/tests/snapshots/main__option_resolution2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - dependency:
      - google/protobuf/descriptor.proto
    extension:
      - extendee: ".google.protobuf.OneofOptions"
        jsonName: myOption
        label: LABEL_OPTIONAL
        name: my_option
        number: 12345
        type: TYPE_INT32
    messageType:
      - field:
          - jsonName: bar
            label: LABEL_OPTIONAL
            name: bar
            number: 1
            oneofIndex: 0
            type: TYPE_INT32
        name: Hello
        oneofDecl:
          - name: something
            options:
              "[my_option]": 54321
    name: test.proto

