prost-reflect/tests/snapshots/main__option_resolution22.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - dependency:
      - google/protobuf/descriptor.proto
    extension:
      - extendee: ".google.protobuf.FileOptions"
        jsonName: ext
        label: LABEL_OPTIONAL
        name: ext
        number: 1001
        type: TYPE_MESSAGE
        typeName: ".Map"
    messageType:
      - field:
          - jsonName: map
            label: LABEL_REPEATED
            name: map
            number: 1
            type: TYPE_MESSAGE
            typeName: ".Map.MapEntry"
        name: Map
        nestedType:
          - field:
              - jsonName: key
                label: LABEL_OPTIONAL
                name: key
                number: 1
                type: TYPE_STRING
              - jsonName: value
                label: LABEL_OPTIONAL
                name: value
                number: 2
                type: TYPE_INT32
            name: MapEntry
            options:
              mapEntry: true
    name: test.proto
    options:
      "[ext]":
        map:
          a: 1
          b: 2
          c: 3
    syntax: proto3

